--- a/Ransomware-Attacks.html
+++ b/Ransomware-Attacks.html
@@ -222,9 +222,7 @@
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-aircrack-ng.png" alt=""/></div>
-                    <div>
-                        <!--Update cyberDocs blog page-->
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">How to hack WiFi using Aircrack-ng</span></a>
+                    <div>                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">How to hack WiFi using Aircrack-ng</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i>Feb 21,2023</div>
                     </div>
                 </div>
