--- a/blockchain.html
+++ b/blockchain.html
@@ -206,43 +206,42 @@
         <div class="owl-carousel owl-theme" id="slider2">
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/39-324x235.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/cpp/C++.png" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                        <a href="Understanding-Pointers-in-C++.html" class="d-block fh5co_small_post_heading"><span class="">Pointers in C++</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Jan 16,2023</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/joe-gardner-75333.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Machine-learning.png" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                        <a href="Linear-Regression-in-ML-AI.html" class="d-block fh5co_small_post_heading"><span class="">Linear Regression in Machine learning</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Feb 18,2023</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/ryan-moreno-98837.jpg" alt=""/></div>
-                    <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                    <div class="fh5co_news_img"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-aircrack-ng.png" alt=""/></div>
+                    <div>                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">How to hack WiFi using Aircrack-ng</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Feb 21,2023</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/seth-doyle-133175.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Python.png" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                        <a href="method-python.html" class="d-block fh5co_small_post_heading"><span class="">Method in python</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</div> 
 <div class="container-fluid fh5co_footer_bg pb-3">
     <div class="container animate-box">
         <div class="row">
