--- a/resources.html
+++ b/resources.html
@@ -27,11 +27,11 @@
     <div class="container">
         <div class="row">
             <div class="col-12 fh5co_mediya_center"><a href="#" class="color_fff fh5co_mediya_setting"><i
-                    class="fa fa-clock-o"></i>&nbsp;&nbsp;&nbsp;Friday, 5 January 2018</a>
+                    class="fa fa-clock-o"></i>&nbsp;&nbsp;&nbsp;Friday, 5 January 2023</a>
                 <div class="d-inline-block fh5co_trading_posotion_relative"><a href="#" class="treding_btn">Trending</a>
                     <div class="fh5co_treding_position_absolute"></div>
                 </div>
-                <a href="#" class="color_fff fh5co_mediya_setting">Instagram’s big redesign goes live with black-and-white app</a>
+                <a href="#" class="color_fff fh5co_mediya_setting">ChatGPT-4</a>
             </div>
         </div>
     </div>
@@ -123,8 +123,7 @@
                     <div class="col-md-7 animate-box">
                         <a href="https://github.com/CyberDocsOfficial" class="fh5co_magna py-2">Github Resources</a> <a href="#" class="fh5co_mini_time py-3"> Education -
                         April 18,2023 </a>
-                        <div class="fh5co_consectetur"> Join to our github page.
-                        </div>
+                        <div class="fh5co_consectetur">Join to our github page.</div>
                     </div>
                 </div>
                 <div class="row pb-4">
@@ -137,7 +136,7 @@
                     <div class="col-md-7">
                         <a href="https://t.me/cyberdocs" class="fh5co_magna py-2">Telegram Server</a> <a href="#" class="fh5co_mini_time py-3"> Resources -
                         April 18,2023 </a>
-                        <div class="fh5co_consectetur"> Join to our Server </div>
+                        <div class="fh5co_consectetur">Join to our Server</div>
                     </div>
                 </div>
                 <div class="row pb-4">
@@ -152,8 +151,7 @@
                     <div class="col-md-7">
                         <a href="https://discord.gg/3kVmvcb9UT" class="fh5co_magna py-2">Discord Server</a> <a href="#" class="fh5co_mini_time py-3"> Resources -
                         April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Join to our Discord Server
-                        </div>
+                        <div class="fh5co_consectetur">Join to our Discord Server</div>
                     </div>
                 </div>
                 <div class="row pb-4">
@@ -164,10 +162,9 @@
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="https://gitlab.com/cyberdocs" class="fh5co_magna py-2"> Gitlab page </a> <a href="#" class="fh5co_mini_time py-3"> Resources -
+                        <a href="https://gitlab.com/cyberdocs" class="fh5co_magna py-2">Gitlab page </a> <a href="#" class="fh5co_mini_time py-3"> Resources -
                         April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Join to Gitlab page
-                        </div>
+                        <div class="fh5co_consectetur">Join to Gitlab page</div>
                     </div>
                 </div>
             </div>
@@ -279,7 +276,7 @@
                     <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Python.png" alt=""/></div>
                     <div>
                         <a href="method-python.html" class="d-block fh5co_small_post_heading"><span class="">Method in python</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Mar 16,2023</div>
                     </div>
                 </div>
             </div>
@@ -292,7 +289,7 @@
             <div class="col-12 spdp_right py-5"><img src="images/logo-iamdreamer.png" alt="img" class="footer_logo"/></div>
             <div class="clearfix"></div>
             <div class="col-12 col-md-4 col-lg-3">
-                <div class="footer_main_title py-3"> About</div>
+                <div class="footer_main_title py-3">About</div>
                 <div class="footer_sub_about pb-3">
                     Our mission is to simplify complex problems and enhance efficiency through the development of intuitive software and intelligent algorithms. Our areas of expertise include software development, artificial intelligence, machine learning, cloud computing, and cybersecurity. At our company, we believe that collaboration is key to success. We are dedicated to staying ahead of the curve when it comes to technology trends and developments.
                 </div>
@@ -314,14 +311,14 @@
             <div class="col-12 col-md-3 col-lg-2">
                 <div class="footer_main_title py-3">Who We Are</div>
                 <ul class="footer_menu">
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Business</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; About Us</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Careers</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Terms of use</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Privacy Policy</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Copy Right</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Technology</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Events</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Business</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;About Us</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Careers</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Terms of use</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Privacy Policy</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Copy Right</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Technology</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Events</a></li>
                 </ul>
             </div>
             <div class="col-12 col-md-5 col-lg-3 position_footer_relative">
@@ -352,7 +349,7 @@
 <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
         <div class="row  ">
-            <div class="col-12 col-md-6 py-4 Reserved"> © Copyright 2023, All rights reserved.<a href="https://iamdreamer.co.in" title="Free HTML5 Bootstrap templates"> IamDreamer.co.in</a></div>
+            <div class="col-12 col-md-6 py-4 Reserved">© Copyright 2023, All rights reserved.<a href="https://iamdreamer.co.in" title="Free HTML5 Bootstrap templates"> IamDreamer.co.in</a></div>
             <div class="col-12 col-md-6 spdp_right py-4">
                 <a href="Contact_us.html" class="footer_last_part_menu">About</a>
                 <a href="Contact_us.html" class="footer_last_part_menu">Contact</a>
