--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="d-inline-block fh5co_trading_posotion_relative"><a href="iamdreamer/trending" class="treding_btn">Trending</a>
                     <div class="fh5co_treding_position_absolute"></div>
                 </div>
-                <a href="open-ai-chatgpt.html" class="color_fff fh5co_mediya_setting">ChatGPT</a>
+                <a href="open-ai-chatgpt.html" class="color_fff fh5co_mediya_setting">ChatGPT-4</a>
             </div>
         </div>
     </div>
