--- a/index.html
+++ b/index.html
@@ -275,13 +275,13 @@
                     <div class="fh5co_hover_news_img">
                         <div class="fh5co_hover_news_img_video_tag_position_relative">
                             <div class="fh5co_news_img">
-                                <iframe width="100%" height="200" src="https://www.youtube.com/embed/0jE_XGOiyAU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/VNTieL-Qyok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                           <div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide" id="play-video">
                             </div>
                         </div>
                         <div>
-                            <a href="https://youtu.be/0jE_XGOiyAU" class="d-block fh5co_small_post_heading"><span class="">How to hack WiFi using Wifite tools in Kali Linux</span></a>
+                            <a href="https://youtu.be/0jE_XGOiyAU" class="d-block fh5co_small_post_heading"><span class="">Free CTF Server for all H4ck3r$ around the World</span></a>
                             <div class="c_g"><i class="fa fa-clock-o"></i>Mar 5 2023</div>
                         </div>
                     </div>
