--- a/index.html
+++ b/index.html
@@ -507,11 +507,11 @@
                 <div class="footer_main_title py-3">Who We Are</div>
                 <ul class="footer_menu">
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Business</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;About Us</a></li>
+                    <li><a href="Contact_us.html" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;About Us</a></li>
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Careers</a></li>
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Terms of use</a></li>
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Privacy Policy</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Copy Right</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Contribute</a></li>
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Technology</a></li>
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Events</a></li>
                 </ul>
@@ -566,6 +566,7 @@
         crossorigin="anonymous"></script>
 <script src="js/jquery.waypoints.min.js"></script>
 <script src="js/main.js"></script>
+<script>if (!navigator.userAgent.match(/Android|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile/i)){$(window).stellar();}</script>
 
 </body>
 </html>
