--- a/index.html
+++ b/index.html
@@ -274,13 +274,13 @@
                     <div class="fh5co_hover_news_img">
                         <div class="fh5co_hover_news_img_video_tag_position_relative">
                             <div class="fh5co_news_img">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/VNTieL-Qyok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe width="100%" height="200" src="https://www.youtube.com/embed/VNTieL-Qyok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                           <div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide" id="play-video">
                             </div>
                         </div>
                         <div>
-                            <a href="https://youtu.be/0jE_XGOiyAU" class="d-block fh5co_small_post_heading"><span class="">Free CTF Server for all H4ck3r$ around the World</span></a>
+                            <a href="https://www.youtu.be/VNTieL-Qyok" class="d-block fh5co_small_post_heading"><span class="">Free CTF Server for all H4ck3r$ around the World</span></a>
                             <div class="c_g"><i class="fa fa-clock-o"></i>Mar 5 2023</div>
                         </div>
                     </div>
@@ -334,13 +334,13 @@
                     <div class="fh5co_hover_news_img">
                         <div class="fh5co_hover_news_img_video_tag_position_relative">
                             <div class="fh5co_news_img">
-                                <iframe src="https://player.vimeo.com/video/815810269?h=c634a9c96b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="3840" height="2160" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="How to Hack WiFi using Wifite"></iframe>
+                                <iframe width="100%" height="200" src="https://www.youtube.com/embed/59eI7rwJa6Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                             <div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide_4" id="play-video_4">
                             </div>
                         </div>
                         <div>
-                            <a href="https://youtu.be/pZ9Nv8wsUYc" class="d-block fh5co_small_post_heading"><span class="">How to hack WiFi using Wifite</span></a>
+                            <a href="https://youtu.be/59eI7rwJa6Y" class="d-block fh5co_small_post_heading"><span class="">How to hack WiFi using Wifite</span></a>
                             <div class="c_g"><i class="fa fa-clock-o"></i>Mar 5 2023</div>
                         </div>
                     </div>
