--- a/resources.html
+++ b/resources.html
@@ -123,7 +123,7 @@
                     <div class="col-md-7 animate-box">
                         <a href="https://github.com/CyberDocsOfficial" class="fh5co_magna py-2">Github Resources</a> <a href="#" class="fh5co_mini_time py-3"> Education -
                         April 18,2023 </a>
-                        <div class="fh5co_consectetur">Join to our github page.</div>
+                        <div class="fh5co_consectetur">Our Github page is a collaborative platform for developers to share, review, and contribute to various projects. With a focus on open-source, we strive to foster an inclusive community of developers who are passionate about innovation and continuous learning. Join us to explore new technologies, exchange ideas, and make a meaningful impact in the world of software development.</div>
                     </div>
                 </div>
                 <div class="row pb-4">
@@ -136,7 +136,7 @@
                     <div class="col-md-7">
                         <a href="https://t.me/cyberdocs" class="fh5co_magna py-2">Telegram Server</a> <a href="#" class="fh5co_mini_time py-3"> Resources -
                         April 18,2023 </a>
-                        <div class="fh5co_consectetur">Join to our Server</div>
+                        <div class="fh5co_consectetur">Join our Telegram community for exclusive updates, engaging discussions, and networking opportunities with like-minded individuals. Connect with experts from various fields, get inspired, and share your knowledge with others. Don't miss out on the chance to be part of our dynamic community. Join us now!</div>
                     </div>
                 </div>
                 <div class="row pb-4">
@@ -151,7 +151,7 @@
                     <div class="col-md-7">
                         <a href="https://discord.gg/3kVmvcb9UT" class="fh5co_magna py-2">Discord Server</a> <a href="#" class="fh5co_mini_time py-3"> Resources -
                         April 18,2016 </a>
-                        <div class="fh5co_consectetur">Join to our Discord Server</div>
+                        <div class="fh5co_consectetur">Join our Discord server and connect with a community of passionate individuals who share common interests. Engage in lively discussions, participate in events, and share your creativity with others. Get access to exclusive content, helpful resources, and make new friends along the way. Don't wait, join us now and become a part of our thriving community.</div>
                     </div>
                 </div>
                 <div class="row pb-4">
@@ -162,9 +162,9 @@
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="https://gitlab.com/cyberdocs" class="fh5co_magna py-2">Gitlab page </a> <a href="#" class="fh5co_mini_time py-3"> Resources -
+                        <a href="https://gitlab.com/cyberdocs" class="fh5co_magna py-2">Gitlab page</a> <a href="#" class="fh5co_mini_time py-3"> Resources -
                         April 18,2016 </a>
-                        <div class="fh5co_consectetur">Join to Gitlab page</div>
+                        <div class="fh5co_consectetur">Our GitLab page is a web-based Git repository manager that provides seamless collaboration and version control for software development teams. From source code management to CI/CD automation, we offer an all-in-one solution that streamlines the software development process. Join us to improve your team's productivity, accelerate project delivery, and enhance the quality of your software.</div>
                     </div>
                 </div>
             </div>
