--- a/lifestyle.html
+++ b/lifestyle.html
@@ -121,11 +121,9 @@
                         </div>
                     </div>
                     <div class="col-md-7 animate-box">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+                        <a href="single.html" class="fh5co_magna py-2">The Oberoi</a> <a href="#" class="fh5co_mini_time py-3"> Top Hotels -
+                        April 18,2023 </a>
+                        <div class="fh5co_consectetur">The Oberoi Hotels & Resorts is a luxury hotel chain with properties located in various destinations around the world, including India, Indonesia, Mauritius, Egypt, and Saudi Arabia. Known for their impeccable service, sophisticated design, and luxurious amenities, The Oberoi hotels offer guests an unforgettable experience of luxury and comfort. With a commitment to sustainability and responsible tourism, The Oberoi Hotels & Resorts aim to provide guests with a memorable and responsible travel experience.
                         </div>
                     </div>
                 </div>
@@ -137,19 +135,10 @@
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                            dolore.
+                        <a href="single.html" class="fh5co_magna py-2">The Leela Palace, Bangalore</a> <a href="#" class="fh5co_mini_time py-3"> Top Hotels -
+                        April 18,2023</a>
+                        <div class="fh5co_consectetur">The Leela Palace Bengaluru is a luxurious 5-star hotel located in the heart of Bengaluru, India. With its majestic architecture, exquisite interiors, and unparalleled hospitality, The Leela Palace Bengaluru offers guests a truly regal experience. The hotel features 357 rooms and suites and multiple dining options that offer a range of international and regional cuisines. With a perfect blend of opulence, elegance, and modernity, The Leela Palace Bengaluru is an ideal choice for business and leisure travelers alike.
                         </div>
-                        <ul class="fh5co_gaming_topikk pt-3">
-                            <li> Why 2017 Might Just Be the Worst Year Ever for Gaming</li>
-                            <li> Ghost Racer Wants to Be the Most Ambitious Car Game</li>
-                            <li> New Nintendo Wii Console Goes on Sale in Strategy Reboot</li>
-                            <li> You and Your Kids can Enjoy this News Gaming Console</li>
-                        </ul>
                     </div>
                 </div>
                 <div class="row pb-4">
