--- a/resources.html
+++ b/resources.html
@@ -316,7 +316,7 @@
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Careers</a></li>
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Terms of use</a></li>
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Privacy Policy</a></li>
-                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Copy Right</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Contribute</a></li>
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Technology</a></li>
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp;Events</a></li>
                 </ul>
