--- a/gadgets.html
+++ b/gadgets.html
@@ -114,45 +114,32 @@
         <div class="row mx-0">
             <div class="col-md-8 animate-box" data-animate-effect="fadeInLeft">
                 <div>
-                    <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">News</div>
+                    <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Updates and News</div>
                 </div>
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/nathan-mcbride-229637.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/gadgets/apple/iphone/apple-iphone-14-pro-max.jpg" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
                     <div class="col-md-7 animate-box">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+                        <a href="single.html" class="fh5co_magna py-2">Apple iPhone 14 Pro and Pro Max</a> <a href="#" class="fh5co_mini_time py-3">April 18,2023</a>
+                        <div class="fh5co_consectetur">The iPhone 14 Pro and iPhone 14 Pro Max are the first iPhones to have a new type of display cutout called "Dynamic Island", replacing the notch design that has been in use since the iPhone X was introduced. Along with the iPhone 14, iPhone 14 Pro models add bidirectional satellite connectivity to contact emergency services when out of range of Wi-Fi and cellular networks. iPhone 14 Pro and iPhone 14 Pro Max models (as well as the iPhone 14 and 14 Plus) sold in the United States dropped support for physical SIM cards, making them the first iPhone models since the CDMA variant of the iPhone 4 to lack a discrete SIM card reader.
                         </div>
                     </div>
                 </div>
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/ryan-moreno-98837.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/gadgets/samsung/s23-ultra.jpg" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                            dolore.
+                        <a href="single.html" class="fh5co_magna py-2">Samsung Galaxy S23 Ultra</a> <a href="#" class="fh5co_mini_time py-3">April 18,2023</a>
+                        <div class="fh5co_consectetur">The Galaxy S23 series includes three devices, which share the same lineup and screen sizes with the previous Galaxy S22 series. The entry-level Galaxy S23 features a flat 6.1-inch (155 mm) display with a variable refresh rate from 48 Hz to 120 Hz, 8 GB of RAM, and storage options from 128 GB to 512 GB. The Galaxy S23+ features similar hardware in a larger 6.6-inch (168 mm) form factor, storage options starting at 256 GB, faster charging rate and larger battery capacity. At the top of the lineup, the Galaxy S23 Ultra features a curved 6.8-inch (173 mm) display with a variable refresh rate starting at 1 Hz, 8 GB or 12 GB of RAM, storage options from 256 GB to 1 TB, and the largest battery capacity in the lineup. Additionally, it features a more advanced camera setup, a higher-resolution display, and like the previous Galaxy S22 Ultra, an integrated S Pen for increased functionality and productivity.
                         </div>
-                        <ul class="fh5co_gaming_topikk pt-3">
-                            <li> Why 2017 Might Just Be the Worst Year Ever for Gaming</li>
-                            <li> Ghost Racer Wants to Be the Most Ambitious Car Game</li>
-                            <li> New Nintendo Wii Console Goes on Sale in Strategy Reboot</li>
-                            <li> You and Your Kids can Enjoy this News Gaming Console</li>
-                        </ul>
                     </div>
                 </div>
                 <div class="row pb-4">
