--- a/education.html
+++ b/education.html
@@ -89,7 +89,7 @@
                         <a class="nav-link" href="education.html">Education<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="lifestyle.html">Gadgets<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="gadgets.html">Gadgets<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="lifestyle.html">Lifestyle<span class="sr-only">(current)</span></a>
