--- a/gadgets.html
+++ b/gadgets.html
@@ -125,7 +125,7 @@
                     </div>
                     <div class="col-md-7 animate-box">
                         <a href="single.html" class="fh5co_magna py-2">Apple iPhone 14 Pro and Pro Max</a> <a href="#" class="fh5co_mini_time py-3">April 18,2023</a>
-                        <div class="fh5co_consectetur">The iPhone 14 Pro and iPhone 14 Pro Max are the first iPhones to have a new type of display cutout called "Dynamic Island", replacing the notch design that has been in use since the iPhone X was introduced. Along with the iPhone 14, iPhone 14 Pro models add bidirectional satellite connectivity to contact emergency services when out of range of Wi-Fi and cellular networks. iPhone 14 Pro and iPhone 14 Pro Max models (as well as the iPhone 14 and 14 Plus) sold in the United States dropped support for physical SIM cards, making them the first iPhone models since the CDMA variant of the iPhone 4 to lack a discrete SIM card reader.
+                        <div class="fh5co_consectetur">The iPhone 14 Pro and iPhone 14 Pro Max are the first iPhones to have a new type of display cutout called "Dynamic Island", replacing the notch design that has been in use since the iPhone X was introduced. Along with the iPhone 14, iPhone 14 Pro models add bidirectional satellite connectivity to contact emergency services when out of range of Wi-Fi and cellular networks. iPhone 14 Pro...<!-- and iPhone 14 Pro Max models (as well as the iPhone 14 and 14 Plus) sold in the United States dropped support for physical SIM cards, making them the first iPhone models since the CDMA variant of the iPhone 4 to lack a discrete SIM card reader.-->
                         </div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                     </div>
                     <div class="col-md-7">
                         <a href="single.html" class="fh5co_magna py-2">Samsung Galaxy S23 Ultra</a> <a href="#" class="fh5co_mini_time py-3">April 18,2023</a>
-                        <div class="fh5co_consectetur">The Galaxy S23 series includes three devices, which share the same lineup and screen sizes with the previous Galaxy S22 series. The entry-level Galaxy S23 features a flat 6.1-inch (155 mm) display with a variable refresh rate from 48 Hz to 120 Hz, 8 GB of RAM, and storage options from 128 GB to 512 GB. The Galaxy S23+ features similar hardware in a larger 6.6-inch (168 mm) form factor, storage options starting at 256 GB, faster charging rate and larger battery capacity. At the top of the lineup, the Galaxy S23 Ultra features a curved 6.8-inch (173 mm) display with a variable refresh rate starting at 1 Hz, 8 GB or 12 GB of RAM, storage options from 256 GB to 1 TB, and the largest battery capacity in the lineup. Additionally, it features a more advanced camera setup, a higher-resolution display, and like the previous Galaxy S22 Ultra, an integrated S Pen for increased functionality and productivity.
+                        <div class="fh5co_consectetur">The Galaxy S23 series includes three devices, which share the same lineup and screen sizes with the previous Galaxy S22 series. The entry-level Galaxy S23 features a flat 6.1-inch (155 mm) display with a variable refresh rate from 48 Hz to 120 Hz, 8 GB of RAM, and storage options...<!--from 128 GB to 512 GB. The Galaxy S23+ features similar hardware in a larger 6.6-inch (168 mm) form factor, storage options starting at 256 GB, faster charging rate and larger battery capacity. At the top of the lineup, the Galaxy S23 Ultra features a curved 6.8-inch (173 mm) display with a variable refresh rate starting at 1 Hz, 8 GB or 12 GB of RAM, storage options from 256 GB to 1 TB, and the largest battery capacity in the lineup. Additionally, it features a more advanced camera setup, a higher-resolution display, and like the previous Galaxy S22 Ultra, an integrated S Pen for increased functionality and productivity.-->
                         </div>
                     </div>
                 </div>
@@ -146,33 +146,27 @@
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
                             <div class="fh5co_news_img">
-                                <img src="images/photo-1449157291145-7efd050a4d0e-578x362.jpg" alt=""/>
+                                <img src="images/gadgets/bmw/bmw-m5.png" alt=""/>
                             </div>
                             <div></div>
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Quis nostrud xercitation ullamco laboris nisi aliquip ex ea commodo
-                            consequat.
+                        <a href="single.html" class="fh5co_magna py-2">BMW M5</a> <a href="#" class="fh5co_mini_time py-3">April 28,2023</a>
+                        <div class="fh5co_consectetur">In addition to its performance capabilities, the M5 also features a luxurious and well-appointed interior, with high-quality materials and advanced technology features. Overall, the BMW M5 is a powerful and refined luxury sedan that is a top choice for those looking for a high-performance car that can also be used for daily driving.
                         </div>
                     </div>
                 </div>
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/office-768x512.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/gadgets/apple/macbook/macbook.jpg" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+                        <a href="single.html" class="fh5co_magna py-2">MacBook Pro</a> <a href="#" class="fh5co_mini_time py-3">April 13,2023</a>
+                        <div class="fh5co_consectetur">The MacBook Pro is available in two sizes: 13-inch and 16-inch. It features Apple's Retina Display technology, which provides a high-resolution screen with excellent color accuracy. The MacBook Pro is powered by Intel Core processors, although newer models now come with Apple's own M1 chip. This chip provides improved performance and battery life.
                         </div>
                     </div>
                 </div>
@@ -238,12 +232,12 @@
         </div>
         <div class="row mx-0">
             <div class="col-12 text-center pb-4 pt-4">
-                <a href="#" class="btn_mange_pagging"><i class="fa fa-long-arrow-left"></i>&nbsp;&nbsp; Previous</a>
+                <a href="#" class="btn_mange_pagging">Previous</a>
                 <a href="#" class="btn_pagging">1</a>
                 <a href="#" class="btn_pagging">2</a>
                 <a href="#" class="btn_pagging">3</a>
                 <a href="#" class="btn_pagging">...</a>
-                <a href="#" class="btn_mange_pagging">Next <i class="fa fa-long-arrow-right"></i>&nbsp;&nbsp; </a>
+                <a href="#" class="btn_mange_pagging">Next</a>
              </div>
         </div>
     </div>
