--- a/lifestyle.html
+++ b/lifestyle.html
@@ -116,7 +116,7 @@
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/lifestyletv/hotels/hotel-five-star.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/lifestyletv/hotels/The-Oberoi.png" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/ryan-moreno-98837.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/lifestyletv/hotels/The-Leela-Palace.png" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
