--- a/education.html
+++ b/education.html
@@ -123,7 +123,7 @@
                     <div class="col-md-7 animate-box">
                         <a href="single.html" class="fh5co_magna py-2">Learn C Programming</a> <a href="#" class="fh5co_mini_time py-3"> Education -
                         April 18,2023</a>
-                        <div class="fh5co_consectetur">C is a general-purpose, procedural programming language that widely used for developing operating systems, embedded systems, system software, and various application software. One of the strengths of C is its low-level control of system resources, such as memory and input/output operations, making it a popular choice for developing operating systems and device drivers. C is also a small language, with a relatively simple syntax, making it easy to learn for beginners.
+                        <div class="fh5co_consectetur">C is a general-purpose, procedural programming language that widely used for developing operating systems, embedded systems, system software, and various application software. One of the strengths of C is its low-level control of system resources, such as memory and input/output operations, making it a popular choice for developing operating systems and device drivers. C...<!-- is also a small language, with a relatively simple syntax, making it easy to learn for beginners.-->
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                     <div class="col-md-7">
                         <a href="single.html" class="fh5co_magna py-2">Learn C++</a> <a href="#" class="fh5co_mini_time py-3"> Education -
                         April 18,2023</a>
-                        <div class="fh5co_consectetur">C++ is a high-level, general-purpose programming language that widely used for developing software applications, games, operating systems, and device drivers. C++ is an object-oriented programming language, which means it supports encapsulation, inheritance, and polymorphism. It is known for its efficiency, performance, and flexibility, and is a popular choice for building complex software systems.
+                        <div class="fh5co_consectetur">C++ is a high-level, general-purpose programming language that widely used for developing software applications, games, operating systems, and device drivers. C++ is an object-oriented programming language, which means it supports encapsulation, inheritance, and polymorphism. It is known for its efficiency, performance, and flexibility, and is a popular choice for building...<!-- complex software systems.-->
                         </div>
                     </div>
                 </div>
@@ -368,17 +368,15 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
-<!--<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
         integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
         crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
-<!-- Waypoints -->
 <script src="js/jquery.waypoints.min.js"></script>
-<!-- Main -->
 <script src="js/main.js"></script>
+<script>if (!navigator.userAgent.match(/Android|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile/i)){$(window).stellar();}</script>
 
 </body>
 </html>
