--- a/lifestyle.html
+++ b/lifestyle.html
@@ -123,7 +123,7 @@
                     <div class="col-md-7 animate-box">
                         <a href="single.html" class="fh5co_magna py-2">The Oberoi</a> <a href="#" class="fh5co_mini_time py-3"> Top Hotels -
                         April 18,2023 </a>
-                        <div class="fh5co_consectetur">The Oberoi Hotels & Resorts is a luxury hotel chain with properties located in various destinations around the world, including India, Indonesia, Mauritius, Egypt, and Saudi Arabia. Known for their impeccable service, sophisticated design, and luxurious amenities, The Oberoi hotels offer guests an unforgettable experience of luxury and comfort. With a commitment to sustainability and responsible tourism, The Oberoi Hotels & Resorts aim to provide guests with a memorable and responsible travel experience.
+                        <div class="fh5co_consectetur">The Oberoi Hotels & Resorts is a luxury hotel chain with properties located in various destinations around the world, including India, Indonesia, Mauritius, Egypt, and Saudi Arabia. Known for their impeccable service, sophisticated design, and luxurious amenities, The Oberoi hotels offer guests an unforgettable experience of luxury and comfort. With a commitment to sustainability and...<!-- responsible tourism, The Oberoi Hotels & Resorts aim to provide guests with a memorable and responsible travel experience.-->
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                     <div class="col-md-7">
                         <a href="single.html" class="fh5co_magna py-2">The Leela Palace, Bangalore</a> <a href="#" class="fh5co_mini_time py-3"> Top Hotels -
                         April 18,2023</a>
-                        <div class="fh5co_consectetur">The Leela Palace Bengaluru is a luxurious 5-star hotel located in the heart of Bengaluru, India. With its majestic architecture, exquisite interiors, and unparalleled hospitality, The Leela Palace Bengaluru offers guests a truly regal experience. The hotel features 357 rooms and suites and multiple dining options that offer a range of international and regional cuisines. With a perfect blend of opulence, elegance, and modernity, The Leela Palace Bengaluru is an ideal choice for business and leisure travelers alike.
+                        <div class="fh5co_consectetur">The Leela Palace Bengaluru is a luxurious 5-star hotel located in the heart of Bengaluru, India. With its majestic architecture, exquisite interiors, and unparalleled hospitality, The Leela Palace Bengaluru offers guests a truly regal experience. The hotel features 357 rooms and suites and multiple dining options that offer a range of international and regional cuisines. With a perfect blend...<!-- of opulence, elegance, and modernity, The Leela Palace Bengaluru is an ideal choice for business and leisure travelers alike.-->
                         </div>
                     </div>
                 </div>
@@ -352,15 +352,6 @@
                 <a href="#" class="footer_post pb-4">Ransomware Attacks: What You Need to Know</a>
             </div>
         </div>
-        <div class="row justify-content-center pt-2 pb-4">
-            <div class="col-12 col-md-8 col-lg-7 ">
-                <div class="input-group">
-                    <span class="input-group-addon fh5co_footer_text_box" id="basic-addon1"><i class="fa fa-envelope"></i></span>
-                    <input type="text" class="form-control fh5co_footer_text_box" placeholder="Enter your email..." aria-describedby="basic-addon1">
-                    <a href="#" class="input-group-addon fh5co_footer_subcribe" id="basic-addon12"> <i class="fa fa-paper-plane-o"></i>&nbsp;&nbsp;Subscribe</a>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
 <div class="container-fluid fh5co_footer_right_reserved">
@@ -381,17 +372,15 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
-<!--<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
         integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
         crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
-<!-- Waypoints -->
 <script src="js/jquery.waypoints.min.js"></script>
-<!-- Main -->
 <script src="js/main.js"></script>
+<script>if (!navigator.userAgent.match(/Android|BlackBerry|iPhone|iPad|iPod|Opera Mini|IEMobile/i)){$(window).stellar();}</script>
 
 </body>
 </html>
