--- a/lifestyle.html
+++ b/lifestyle.html
@@ -27,11 +27,11 @@
     <div class="container">
         <div class="row">
             <div class="col-12 fh5co_mediya_center"><a href="#" class="color_fff fh5co_mediya_setting"><i
-                    class="fa fa-clock-o"></i>&nbsp;&nbsp;&nbsp;Friday, 5 January 2018</a>
+                    class="fa fa-clock-o"></i>&nbsp;&nbsp;&nbsp;Friday, 5 January 2023</a>
                 <div class="d-inline-block fh5co_trading_posotion_relative"><a href="#" class="treding_btn">Trending</a>
                     <div class="fh5co_treding_position_absolute"></div>
                 </div>
-                <a href="#" class="color_fff fh5co_mediya_setting">Instagram’s big redesign goes live with black-and-white app</a>
+                <a href="#" class="color_fff fh5co_mediya_setting">ChatGPT4</a>
             </div>
         </div>
     </div>
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2">The Leela Palace, Bangalore</a> <a href="#" class="fh5co_mini_time py-3"> Top Hotels -
+                        <a href="single.html" class="fh5co_magna py-2">The Leela Palace, Bangalore</a> <a href="#" class="fh5co_mini_time py-3">Top Hotels -
                         April 18,2023</a>
                         <div class="fh5co_consectetur">The Leela Palace Bengaluru is a luxurious 5-star hotel located in the heart of Bengaluru, India. With its majestic architecture, exquisite interiors, and unparalleled hospitality, The Leela Palace Bengaluru offers guests a truly regal experience. The hotel features 357 rooms and suites and multiple dining options that offer a range of international and regional cuisines. With a perfect blend...<!-- of opulence, elegance, and modernity, The Leela Palace Bengaluru is an ideal choice for business and leisure travelers alike.-->
                         </div>
@@ -145,33 +145,29 @@
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
                             <div class="fh5co_news_img">
-                                <img src="images/photo-1449157291145-7efd050a4d0e-578x362.jpg" alt=""/>
+                                <img src="images/lifestyletv/hotels/Evolve-Back.png" alt=""/>
                             </div>
                             <div></div>
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Quis nostrud xercitation ullamco laboris nisi aliquip ex ea commodo
-                            consequat.
+                        <a href="single.html" class="fh5co_magna py-2">Evolve Back</a> <a href="#" class="fh5co_mini_time py-3">Top Hotels -
+                        April 18,2023 </a>
+                        <div class="fh5co_consectetur">Evolve Back (formerly known as Orange County) is a luxury hotel chain in India, with properties in the southern state of Karnataka. The hotel chain offers a range of experiences, from nature and wildlife-focused getaways to cultural and historical immersion experiences. The Evolve Back properties are designed to reflect the local architecture and culture of the region, with luxurious and spacious...<!-- villas, private pools, and stunning natural surroundings...-->
                         </div>
                     </div>
                 </div>
                 <div class="row pb-4">
                     <div class="col-md-5">
                         <div class="fh5co_hover_news_img">
-                            <div class="fh5co_news_img"><img src="images/office-768x512.jpg" alt=""/></div>
+                            <div class="fh5co_news_img"><img src="images/lifestyletv/hotels/Hyatt.png" alt=""/></div>
                             <div></div>
                         </div>
                     </div>
                     <div class="col-md-7">
-                        <a href="single.html" class="fh5co_magna py-2"> Magna aliqua ut enim ad minim veniam quis
-                        nostrud quis xercitation ullamco. </a> <a href="#" class="fh5co_mini_time py-3"> Thomson Smith -
-                        April 18,2016 </a>
-                        <div class="fh5co_consectetur"> Amet consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+                        <a href="single.html" class="fh5co_magna py-2">Hyatt</a> <a href="#" class="fh5co_mini_time py-3"> Top Hotels -
+                        April 18,2023 </a>
+                        <div class="fh5co_consectetur">One of the hallmarks of Hyatt hotels and resorts is their contemporary design, attention to detail, and commitment to sustainability. From sleek urban hotels to serene beach resorts and mountain lodges, each property is designed to reflect its local culture and surroundings while providing a high level of comfort and luxury...
                         </div>
                     </div>
                 </div>
