--- a/lifestyle.html
+++ b/lifestyle.html
@@ -280,7 +280,7 @@
                     <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Python.png" alt=""/></div>
                     <div>
                         <a href="method-python.html" class="d-block fh5co_small_post_heading"><span class="">Method in python</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Feb 16,2023</div>
                     </div>
                 </div>
             </div>
@@ -293,7 +293,7 @@
             <div class="col-12 spdp_right py-5"><img src="images/logo-iamdreamer.png" alt="img" class="footer_logo"/></div>
             <div class="clearfix"></div>
             <div class="col-12 col-md-4 col-lg-3">
-                <div class="footer_main_title py-3"> About</div>
+                <div class="footer_main_title py-3">About</div>
                 <div class="footer_sub_about pb-3">
                     Our mission is to simplify complex problems and enhance efficiency through the development of intuitive software and intelligent algorithms. Our areas of expertise include software development, artificial intelligence, machine learning, cloud computing, and cybersecurity. At our company, we believe that collaboration is key to success. We are dedicated to staying ahead of the curve when it comes to technology trends and developments.
                 </div>
@@ -313,7 +313,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-3 col-lg-2">
-                <div class="footer_main_title py-3"> Who We Are</div>
+                <div class="footer_main_title py-3">Who We Are</div>
                 <ul class="footer_menu">
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Business</a></li>
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; About Us</a></li>
@@ -327,13 +327,13 @@
             </div>
             <div class="col-12 col-md-5 col-lg-3 position_footer_relative">
                 <div class="footer_main_title py-3"> New Updates</div>
-                <div class="footer_makes_sub_font"> Dec 31, 2016</div>
+                <div class="footer_makes_sub_font"> Feb 31, 2023</div>
+                <a href="#" class="footer_post pb-4">New Lamborghini Revuelto</a>
+                <div class="footer_makes_sub_font"> Dec 31, 2023</div>
                 <a href="#" class="footer_post pb-4"> Success is not a good teacher failure makes you humble </a>
-                <div class="footer_makes_sub_font"> Dec 31, 2016</div>
+                <div class="footer_makes_sub_font"> Dec 31, 2023</div>
                 <a href="#" class="footer_post pb-4"> Success is not a good teacher failure makes you humble </a>
-                <div class="footer_makes_sub_font"> Dec 31, 2016</div>
-                <a href="#" class="footer_post pb-4"> Success is not a good teacher failure makes you humble </a>
-                <div class="footer_makes_sub_font"> Dec 31, 2016</div>
+                <div class="footer_makes_sub_font"> Dec 31, 2023</div>
                 <a href="#" class="footer_post pb-4"> Success is not a good teacher failure makes you humble </a>
             </div>
             <div class="col-12 col-md-12 col-lg-4 ">
