--- a/lifestyle.html
+++ b/lifestyle.html
@@ -326,11 +326,11 @@
                 </ul>
             </div>
             <div class="col-12 col-md-5 col-lg-3 position_footer_relative">
-                <div class="footer_main_title py-3"> New Updates</div>
+                <div class="footer_main_title py-3">New Updates</div>
                 <div class="footer_makes_sub_font"> Feb 31, 2023</div>
                 <a href="#" class="footer_post pb-4">New Lamborghini Revuelto</a>
                 <div class="footer_makes_sub_font"> Dec 31, 2023</div>
-                <a href="#" class="footer_post pb-4"> Success is not a good teacher failure makes you humble </a>
+                <a href="#" class="footer_post pb-4">How to </a>
                 <div class="footer_makes_sub_font"> Dec 31, 2023</div>
                 <a href="#" class="footer_post pb-4"> Success is not a good teacher failure makes you humble </a>
                 <div class="footer_makes_sub_font"> Dec 31, 2023</div>
